--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,7 @@ on: [push]
 jobs: 
   test-lint:
     name: Testing and Linting
-    run-on: ubuntu-24.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Login to hub
         uses: docker/login-action@v1
